Fixing the alignment of the featured image. It was floated left for some reason.

--- a/templates/css/espresso_default.css
+++ b/templates/css/espresso_default.css
@@ -9,7 +9,7 @@
 	text-align: right; font-size:.9em;
 }
 .ee-featured-image{
-	float: left;
+	float: right;
 	margin:5px;
 	padding:10px;
 }
